# find_calib_pattern

./: .gitignore  CMakeLists.txt  LICENSE  README.md  find_halcon_calbrd.cpp  find_halcon_calbrd.hpp  fit_ellipse_subpixel.cpp
include/: find_calib_pattern.hpp
src/: find_calib_pattern.cpp  fit_ellipse_subpixel.cpp
test/: CMakeLists.txt  test.cpp
